<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_e35"
    tools:context=".activities.AudioActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="308dp"
        android:layout_height="263dp"
        android:layout_marginTop="151dp"
        android:layout_marginBottom="395dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.692"
        app:srcCompat="@drawable/white" />

    <Button
        android:id="@+id/recordButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="103dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="60dp"
        android:background="#03A9F4"
        android:text="@string/record"
        android:textColor="#212121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/stopButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="103dp"
        android:layout_height="48dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:background="#03A9F4"
        android:text="@string/stop"
        android:textColor="#212121"
        app:layout_constraintEnd_toStartOf="@+id/chooseButton"
        app:layout_constraintStart_toEndOf="@+id/recordButton"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/chooseButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="103dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:background="#03A9F4"
        android:text="@string/choose"
        android:textColor="#212121"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/deleteButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="112dp"
        android:layout_height="57dp"
        android:layout_marginStart="276dp"
        android:layout_marginBottom="16dp"
        android:background="#F44336"
        android:text="@string/delete"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/stopAudioButton"
        android:layout_width="75dp"
        android:layout_height="59dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/todo"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseButton"
        app:srcCompat="@drawable/ic_baseline_stop_24" />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="86dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="88dp"
        android:contentDescription="@string/todo"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordButton"
        app:srcCompat="@drawable/ic_baseline_play_arrow_24" />

</androidx.constraintlayout.widget.ConstraintLayout>